update styleguide listing

--- a/styleguide.html
+++ b/styleguide.html
@@ -767,6 +767,78 @@
                 </div>
               </div>
             </div>
+            <div class="sg-component-code">
+                <p class="sg-component-label">Code</p>
+            <pre><code>
+&lt;h2&gt;Our Team&lt;/h2&gt;
+  &lt;div class="team-group row"&gt;
+    &lt;div class="team-item col col--6md"&gt;
+      &lt;div class="team-item__content--alt"&gt;
+        &lt;div class="team-item__photo"&gt;
+          &lt;img src="img/about-nam.jpg" alt="Nam Zakaria" class="img-responsive"&gt;
+        &lt;/div&gt;
+        &lt;div class="team-item__info"&gt;
+          &lt;p&gt;
+          &lt;strong&gt;Nam Zakaria&lt;/strong&gt;&lt;br&gt;
+            Founder
+          &lt;/p&gt;
+          &lt;p class="team-item__bio"&gt;
+            Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and  nutrition. His qualifications include CPTS, CrossFit, TRX and CFES-WT.
+          &lt;/p&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class="team-item col col--6md"&gt;
+      &lt;div class="team-item__content--alt"&gt;
+        &lt;div class="team-item__photo"&gt;
+          &lt;img src="img/about-michelle.jpg" alt="Michelle Barret" class="img-responsive"&gt;
+        &lt;/div&gt;
+        &lt;div class="team-item__info"&gt;
+          &lt;p&gt;
+          &lt;strong&gt;Michelle Barret&lt;/strong&gt;&lt;br&gt;
+               Trainer
+          &lt;/p&gt;
+          &lt;p class="team-item__bio"&gt;
+                Michelle is a fitness coach with over 10 years of experience. She has a BA  in Human Kinetics from UBC and is certified BCRPA-SFL, TRX, CPR &amp; AED.
+          &lt;/p&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class="team-item col col--6md"&gt;
+      &lt;div class="team-item__content--alt"&gt;
+        &lt;div class="team-item__photo"&gt;
+          &lt;img src="img/about-jal.jpg" alt="Jal Nasr" class="img-responsive"&gt;
+        &lt;div&gt;
+        &lt;div class="team-item__info"&gt;
+              &lt;p&gt;
+              &lt;strong&gt;Jal Nasr&lt;/strong&gt;&lt;br&gt;
+                   Trainer
+              &lt;/p&gt;
+              &lt;p class="team-item__bio"&gt;
+                   Jal is trainer with over 5 years of experience. He is certified in CanFitPro, TRX, Sandbell, CPR &amp; AED and dotFIT.
+              &lt;/p&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class="team-item col col--6md"&gt;
+          &lt;div class="team-item__content--alt"&gt;
+            &lt;div class="team-item__photo"&gt;
+              &lt;img src="img/about-josh.jpg" alt="Josh Jackman" class="img-responsive"&gt;
+            &lt;/div&gt;
+            &lt;div class="team-item__info"&gt;
+              &lt;p&gt;
+              &lt;strong&gt;Josh Jackman&lt;/strong&gt;&lt;br&gt;
+                    Trainer
+              &lt;/p&gt;
+              &lt;p class="team-item__bio"&gt;
+                    osh is a graduate from Camosun College with a Sports Performance Diploma. He is certified in NASM, Agatsu kettlebell, CPR &amp; AED.
+              &lt;/p&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+            </code></pre>
+          </div>
         </section>
         <section>
           <h2 id="grid">
