--- a/styleguide.html
+++ b/styleguide.html
@@ -662,29 +662,29 @@
   &lt;p&gt;
      Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
   &lt;/p&gt;
-  &lt;ul class="listings row"&gt;
-    &lt;li class="listings__item listings__item--alt col col--6md"&gt;
-      &lt;p class="listings__item-content "&gt;
-        &lt;span class="listings__item-title"&gt;$90/ea&lt;/span&gt;
-        &lt;span class="listings__item-prop"&gt;for 3 sessions&lt;/span&gt;
+  &lt;ul class=&quot;listings row&quot;&gt;
+    &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
+      &lt;p class=&quot;listings__item-content &quot;&gt;
+        &lt;span class=&quot;listings__item-title&quot;&gt;$90/ea&lt;/span&gt;
+        &lt;span class=&quot;listings__item-prop&quot;&gt;for 3 sessions&lt;/span&gt;
       &lt;/p&gt;
     &lt;/li&gt;
-    &lt;li class="listings__item listings__item--alt col col--6md"&gt;
-      &lt;p class="listings__item-content "&gt;
-        &lt;span class="listings__item-title"&gt;$85/ea&lt;/span&gt;
-        &lt;span class="listings__item-prop"&gt;for 9 sessions&lt;/span&gt;
+    &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
+      &lt;p class=&quot;listings__item-content&quot;&gt;
+        &lt;span class=&quot;listings__item-title&quot;&gt;$85/ea&lt;/span&gt;
+        &lt;span class=&quot;listings__item-prop&quot;&gt;for 9 sessions&lt;/span&gt;
       &lt;/p&gt;
     &lt;/li&gt;
-    &lt;li class="listings__item listings__item--alt col col--6md"&gt;
-      &lt;p class="listings__item-content "&gt;
-        &lt;span class="listings__item-title"&gt;$75/ea&lt;/span&gt;
-        &lt;span class="listings__item-prop"&gt;for 48 sessions&lt;/span&gt;
+    &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
+      &lt;p class=&quot;listings__item-content &quot;&gt;
+        &lt;span class=&quot;listings__item-title&quot;&gt;$75/ea&lt;/span&gt;
+        &lt;span class=&quot;listings__item-prop&quot;&gt;for 48 sessions&lt;/span&gt;
       &lt;/p&gt;
     &lt;/li&gt;
-    &lt;li class="listings__item listings__item--alt col col--6md"&gt;
-      &lt;p class="listings__item-content "&gt;
-        &lt;span class="listings__item-title"&gt;$70/ea&lt;/span&gt;
-        &lt;span class="listings__item-prop"&gt;for 96 sessions&lt;/span&gt;
+    &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
+      &lt;p class=&quot;listings__item-content &quot;&gt;
+        &lt;span class=&quot;listings__item-title&quot;&gt;$70/ea&lt;/span&gt;
+        &lt;span class=&quot;listings__item-prop&quot;&gt;for 96 sessions&lt;/span&gt;
       &lt;/p&gt;
     &lt;/li&gt;
   &lt;/ul&gt;
@@ -692,7 +692,7 @@
    Sign up for membership first and you'll be able to add sessions from your dashboard online.
   &lt;/p&gt;
   &lt;p&gt;
-    &lt;a href="join.html" class="btn"&gt;
+    &lt;a href=&quot;join.html&quot; class=&quot;btn&quot;&gt;
     Join Now
     &lt;/a&gt;
   &lt;/p&gt;
@@ -771,66 +771,66 @@
                 <p class="sg-component-label">Code</p>
             <pre><code>
 &lt;h2&gt;Our Team&lt;/h2&gt;
-  &lt;div class="team-group row"&gt;
-    &lt;div class="team-item col col--6md"&gt;
-      &lt;div class="team-item__content--alt"&gt;
-        &lt;div class="team-item__photo"&gt;
-          &lt;img src="img/about-nam.jpg" alt="Nam Zakaria" class="img-responsive"&gt;
+  &lt;div class=&quot;team-group row&quot;&gt;
+    &lt;div class=&quot;team-item col col--6md&quot;&gt;
+      &lt;div class=&quot;team-item__content--alt&quot;&gt;
+        &lt;div class=&quot;team-item__photo&quot;&gt;
+          &lt;img src=&quot;img/about-nam.jpg&quot; alt=&quot;Nam Zakaria&quot; class=&quot;img-responsive&quot;&gt;
         &lt;/div&gt;
-        &lt;div class="team-item__info"&gt;
+        &lt;div class=&quot;team-item__info&quot;&gt;
           &lt;p&gt;
           &lt;strong&gt;Nam Zakaria&lt;/strong&gt;&lt;br&gt;
             Founder
           &lt;/p&gt;
-          &lt;p class="team-item__bio"&gt;
+          &lt;p class=&quot;team-item__bio&quot;&gt;
             Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and  nutrition. His qualifications include CPTS, CrossFit, TRX and CFES-WT.
           &lt;/p&gt;
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
-    &lt;div class="team-item col col--6md"&gt;
-      &lt;div class="team-item__content--alt"&gt;
-        &lt;div class="team-item__photo"&gt;
-          &lt;img src="img/about-michelle.jpg" alt="Michelle Barret" class="img-responsive"&gt;
+    &lt;div class=&quot;team-item col col--6md&quot;&gt;
+      &lt;div class=&quot;team-item__content--alt&quot;&gt;
+        &lt;div class=&quot;team-item__photo&quot;&gt;
+          &lt;img src=&quot;img/about-michelle.jpg&quot; alt=&quot;Michelle Barret&quot; class=&quot;img-responsive&quot;&gt;
         &lt;/div&gt;
-        &lt;div class="team-item__info"&gt;
+        &lt;div class=&quot;team-item__info&quot;&gt;
           &lt;p&gt;
           &lt;strong&gt;Michelle Barret&lt;/strong&gt;&lt;br&gt;
                Trainer
           &lt;/p&gt;
-          &lt;p class="team-item__bio"&gt;
+          &lt;p class=&quot;team-item__bio&quot;&gt;
                 Michelle is a fitness coach with over 10 years of experience. She has a BA  in Human Kinetics from UBC and is certified BCRPA-SFL, TRX, CPR &amp; AED.
           &lt;/p&gt;
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
-    &lt;div class="team-item col col--6md"&gt;
-      &lt;div class="team-item__content--alt"&gt;
-        &lt;div class="team-item__photo"&gt;
-          &lt;img src="img/about-jal.jpg" alt="Jal Nasr" class="img-responsive"&gt;
+    &lt;div class=&quot;team-item col col--6md&quot;&gt;
+      &lt;div class=&quot;team-item__content--alt&quot;&gt;
+        &lt;div class=&quot;team-item__photo&quot;&gt;
+          &lt;img src=&quot;img/about-jal.jpg&quot; alt=&quot;Jal Nasr&quot; class=&quot;img-responsive&quot;&gt;
         &lt;div&gt;
-        &lt;div class="team-item__info"&gt;
+        &lt;div class=&quot;team-item__info&quot;&gt;
               &lt;p&gt;
               &lt;strong&gt;Jal Nasr&lt;/strong&gt;&lt;br&gt;
                    Trainer
               &lt;/p&gt;
-              &lt;p class="team-item__bio"&gt;
+              &lt;p class=&quot;team-item__bio&quot;&gt;
                    Jal is trainer with over 5 years of experience. He is certified in CanFitPro, TRX, Sandbell, CPR &amp; AED and dotFIT.
               &lt;/p&gt;
             &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
-        &lt;div class="team-item col col--6md"&gt;
-          &lt;div class="team-item__content--alt"&gt;
-            &lt;div class="team-item__photo"&gt;
-              &lt;img src="img/about-josh.jpg" alt="Josh Jackman" class="img-responsive"&gt;
+        &lt;div class=&quot;team-item col col--6md&quot;&gt;
+          &lt;div class=&quot;team-item__content--alt&quot;&gt;
+            &lt;div class=&quot;team-item__photo&quot;&gt;
+              &lt;img src=&quot;img/about-josh.jpg&quot; alt=&quot;Josh Jackman&quot; class=&quot;img-responsive&quot;&gt;
             &lt;/div&gt;
-            &lt;div class="team-item__info"&gt;
+            &lt;div class=&quot;team-item__info&quot;&gt;
               &lt;p&gt;
               &lt;strong&gt;Josh Jackman&lt;/strong&gt;&lt;br&gt;
                     Trainer
               &lt;/p&gt;
-              &lt;p class="team-item__bio"&gt;
+              &lt;p class=&quot;team-item__bio&quot;&gt;
                     osh is a graduate from Camosun College with a Sports Performance Diploma. He is certified in NASM, Agatsu kettlebell, CPR &amp; AED.
               &lt;/p&gt;
             &lt;/div&gt;
