--- a/register1.html
+++ b/register1.html
@@ -83,13 +83,12 @@
         <p class="footer__cta">
           Great physique awaits you.
         </p>
-        <p class="footer_copyright">
-          &copy; Created by Charlie Chao and Lance Zheng 
+        <p class="footer__copyright">
+          &copy; 2018 Mighty Life Fitness
         </p>
-        <p class="footer__cta">
-
+        <p class="footer__note">
           <a href="styleguide.html">
-            Styleguide and Citation available here
+            View Styleguide and Citations
           </a>
         </p>
       </div>
