--- a/events.html
+++ b/events.html
@@ -114,13 +114,12 @@
             Join Now
           </a>
         </p>
-        <p class="footer_copyright">
-          &copy; Created by Charlie Chao and Lance Zheng 
+        <p class="footer__copyright">
+          &copy; 2018 Mighty Life Fitness
         </p>
-        <p class="footer__cta">
-
+        <p class="footer__note">
           <a href="styleguide.html">
-            Styleguide and Citation available here
+            View Styleguide and Citations
           </a>
         </p>
       </div>
