Add website link to SG nav.

--- a/wireframes.html
+++ b/wireframes.html
@@ -29,6 +29,9 @@
             <li>
               <a href="citations.html" class="sg-nav__item sg-nav__item--page">Citations</a>
             </li>
+            <li>
+              <a href="index.html" class="sg-nav__item sg-nav__item--page">Website</a>
+            </li>
           </ul>
         </nav>
       </header>
