--- a/styleguide.html
+++ b/styleguide.html
@@ -238,32 +238,32 @@
           <p>
             Use professionally shot high-quality images for hero backgrounds and figures.
           </p>
-          <h3 id="figures">
+          <h3>
             Figures
           </h3>
           <p>
-            <img src="img/imagery-new.jpg" alt="Imagery for MLF." class="img-responsive">
+            <img src="img/sg-figures.jpg" alt="Imagery for MLF" class="img-responsive">
           </p>
-          <h3 id="navagation--backgrounds">
-             Navagation Background
+          <h3>
+             Backgrounds
           </h3>
           <p>
-            <img src="img/hero-about.jpg" alt="hero page in about page." class="img-responsive">
+            <img src="img/hero-landing.jpg" alt="Landing hero image" class="img-responsive">
           </p>
           <p>
-            <img src="img/hero-contact.jpg" alt="hero page in contact page." class="img-responsive">
+            <img src="img/hero-about.jpg" alt="About hero image" class="img-responsive">
           </p>
           <p>
-            <img src="img/hero-events.jpg" alt="hero page in events page." class="img-responsive">
+            <img src="img/hero-contact.jpg" alt="Contact hero image" class="img-responsive">
           </p>
           <p>
-            <img src="img/hero-join.jpg" alt="hero page in join us page." class="img-responsive">
+            <img src="img/hero-events.jpg" alt="Events hero" class="img-responsive">
           </p>
           <p>
-            <img src="img/hero-landing.jpg" alt="hero page in landing page." class="img-responsive">
+            <img src="img/hero-join.jpg" alt="Join hero image." class="img-responsive">
           </p>
           <p>
-            <img src="img/hero-login.jpg" alt="hero page in log in page." class="img-responsive">
+            <img src="img/hero-login.jpg" alt="Login hero image." class="img-responsive">
           </p>
         </section>
 
@@ -658,44 +658,44 @@
             <div class="sg-component-code">
                 <p class="sg-component-label">Code</p>
             <pre><code>
-  &lt;h2&gt;Training&lt;/h2&gt;
-  &lt;p&gt;
-     Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
-  &lt;/p&gt;
-  &lt;ul class=&quot;listings row&quot;&gt;
-    &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
-      &lt;p class=&quot;listings__item-content &quot;&gt;
-        &lt;span class=&quot;listings__item-title&quot;&gt;$90/ea&lt;/span&gt;
-        &lt;span class=&quot;listings__item-prop&quot;&gt;for 3 sessions&lt;/span&gt;
-      &lt;/p&gt;
-    &lt;/li&gt;
-    &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
-      &lt;p class=&quot;listings__item-content&quot;&gt;
-        &lt;span class=&quot;listings__item-title&quot;&gt;$85/ea&lt;/span&gt;
-        &lt;span class=&quot;listings__item-prop&quot;&gt;for 9 sessions&lt;/span&gt;
-      &lt;/p&gt;
-    &lt;/li&gt;
-    &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
-      &lt;p class=&quot;listings__item-content &quot;&gt;
-        &lt;span class=&quot;listings__item-title&quot;&gt;$75/ea&lt;/span&gt;
-        &lt;span class=&quot;listings__item-prop&quot;&gt;for 48 sessions&lt;/span&gt;
-      &lt;/p&gt;
-    &lt;/li&gt;
-    &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
-      &lt;p class=&quot;listings__item-content &quot;&gt;
-        &lt;span class=&quot;listings__item-title&quot;&gt;$70/ea&lt;/span&gt;
-        &lt;span class=&quot;listings__item-prop&quot;&gt;for 96 sessions&lt;/span&gt;
-      &lt;/p&gt;
-    &lt;/li&gt;
-  &lt;/ul&gt;
-  &lt;p&gt;
-   Sign up for membership first and you'll be able to add sessions from your dashboard online.
-  &lt;/p&gt;
-  &lt;p&gt;
-    &lt;a href=&quot;join.html&quot; class=&quot;btn&quot;&gt;
-    Join Now
-    &lt;/a&gt;
-  &lt;/p&gt;
+&lt;h2&gt;Training&lt;/h2&gt;
+&lt;p&gt;
+   Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
+&lt;/p&gt;
+&lt;ul class=&quot;listings row&quot;&gt;
+  &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
+    &lt;p class=&quot;listings__item-content &quot;&gt;
+      &lt;span class=&quot;listings__item-title&quot;&gt;$90/ea&lt;/span&gt;
+      &lt;span class=&quot;listings__item-prop&quot;&gt;for 3 sessions&lt;/span&gt;
+    &lt;/p&gt;
+  &lt;/li&gt;
+  &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
+    &lt;p class=&quot;listings__item-content&quot;&gt;
+      &lt;span class=&quot;listings__item-title&quot;&gt;$85/ea&lt;/span&gt;
+      &lt;span class=&quot;listings__item-prop&quot;&gt;for 9 sessions&lt;/span&gt;
+    &lt;/p&gt;
+  &lt;/li&gt;
+  &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
+    &lt;p class=&quot;listings__item-content &quot;&gt;
+      &lt;span class=&quot;listings__item-title&quot;&gt;$75/ea&lt;/span&gt;
+      &lt;span class=&quot;listings__item-prop&quot;&gt;for 48 sessions&lt;/span&gt;
+    &lt;/p&gt;
+  &lt;/li&gt;
+  &lt;li class=&quot;listings__item listings__item--alt col col--6md&quot;&gt;
+    &lt;p class=&quot;listings__item-content &quot;&gt;
+      &lt;span class=&quot;listings__item-title&quot;&gt;$70/ea&lt;/span&gt;
+      &lt;span class=&quot;listings__item-prop&quot;&gt;for 96 sessions&lt;/span&gt;
+    &lt;/p&gt;
+  &lt;/li&gt;
+&lt;/ul&gt;
+&lt;p&gt;
+ Sign up for membership first and you'll be able to add sessions from your dashboard online.
+&lt;/p&gt;
+&lt;p&gt;
+  &lt;a href=&quot;join.html&quot; class=&quot;btn&quot;&gt;
+  Join Now
+  &lt;/a&gt;
+&lt;/p&gt;
             </code></pre>
           </div>
             <div class="sg-component-preview">
@@ -837,6 +837,9 @@
           &lt;/div&gt;
         &lt;/div&gt;
       &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
             </code></pre>
           </div>
         </section>
