--- a/citations.html
+++ b/citations.html
@@ -43,36 +43,26 @@
         </h1>
         <ul class="sg-citations">
           <li>
-            Google. &ldquo;Google/Material-Design-Icons.&rdquo; <em>GitHub,</em> 11 Jan. 2018, <a href="https://github.com/google/material-design-icons" target="_blank">github.com/google/material-design-icons</a>.
+            Kristoferjoseph. &ldquo;Kristoferjoseph/Flexboxgrid.&rdquo; <em>GitHub</em>, January 13, 2017, <a href="https://github.com/kristoferjoseph/flexboxgrid" target="_blank">github.com/kristoferjoseph/flexboxgrid</a>.
           </li>
           <li>
-            Kristoferjoseph. &ldquo;Kristoferjoseph/Flexboxgrid.&rdquo; <em>GitHub</em>, 13 Jan. 2017, <a href="https://github.com/kristoferjoseph/flexboxgrid" target="_blank">github.com/kristoferjoseph/flexboxgrid</a>.
+            Hero images from Calhoun. &ldquo;PERSONAL TRAINING.&rdquo; <em>Calhoun</em>, 2018, <a href="http://www.calhounbeachfitness.com/services/personal-training/" target="_blank">http://www.calhounbeachfitness.com/services/personal-training/</a>.
           </li>
           <li>
-              hero images from Calhoun &ldquo;PERSONAL TRAINING&rdquo; <em>Calhoun</em>, 2018, <a href="http://www.calhounbeachfitness.com/services/personal-training/" target="_blank">http://www.calhounbeachfitness.com/services/personal-training/
-            </a>.
+            Hero image from Yogamatters. &ldquo;Festive Yoga Events Calendar.&rdquo; <em>Yogamatters</em>, November 16, 2016, <a href="https://www.yogamatters.com/blog/festive-yoga-events-calendar/" target="_blank">https://www.yogamatters.com/blog/festive-yoga-events-calendar/</a>.
           </li>
           <li>
-            hero image from Yogamatters &ldquo;Festive Yoga Events Calendar&rdquo; <em>Yogamatters</em>, November 16th, 2016, <a href="https://www.yogamatters.com/blog/festive-yoga-events-calendar/" target="_blank">https://www.yogamatters.com/blog/festive-yoga-events-calendar/
-            </a>.
+            Moksha Yoga Vancouver. &ldquo;Hot Hatha Songs and Gongs.&rdquo; <em>Moksha Yoga Vancouver</em>, 2018, <a href="https://vancouver.mokshayoga.ca/event/hot-hatha-songs-and-gongs/" target="_blank">https://vancouver.mokshayoga.ca/event/hot-hatha-songs-and-gongs/</a>.
           </li>
           <li>
-            Moksha Yoga Vancouver &ldquo;Hot Hatha Songs and Gongs&rdquo; <em>  Moksha Yoga Vancouver</em>, 2018 <a href="https://vancouver.mokshayoga.ca/event/hot-hatha-songs-and-gongs/" target="_blank">https://vancouver.mokshayoga.ca/event/hot-hatha-songs-and-gongs/
-            </a>.
+            Jozef Polc. &ldquo;Hero image in gym environment section.&rdquo; <em>500px</em>, <a href="https://drscdn.500px.org/photo/229742167/q%3D80_h%3D450/v2?webp=true&sig=d05d59294798d76728d4e7ca41dba4a075ff73a6f8d1c3a63996b47fb8f5caab" target="_blank">https://drscdn.500px.org/photo/229742167/q%3D80_h%3D450/v2?webp=true&sig=d05d59294798d76728d4e7ca41dba4a075ff73a6f8d1c3a63996b47fb8f5caab</a>.
           </li>
           <li>
-            Jozef Polc &ldquo;Hero image in gym environment section&rdquo; <em>  500px</em> <a href="https://drscdn.500px.org/photo/229742167/q%3D80_h%3D450/v2?webp=true&sig=d05d59294798d76728d4e7ca41dba4a075ff73a6f8d1c3a63996b47fb8f5caab" target="_blank">https://drscdn.500px.org/photo/229742167/q%3D80_h%3D450/v2?webp=true&sig=d05d59294798d76728d4e7ca41dba4a075ff73a6f8d1c3a63996b47fb8f5caab
-            </a>.
+            Stock Photo. &ldquo;Pair of young adult women doing abdominal muscle Russian twist exercises.&rdquo; <em>123RF</em>, <a href="https://www.123rf.com/photo_76321532_pair-of-young-adult-women-doing-abdominal-muscle-russian-twist-exercises-while-holding-weights.html?fromid=bHBtdFZhVWJjR3BJYVJnNlVQUmJ0Zz09" target="_blank">https://www.123rf.com/photo_76321532_pair-of-young-adult-women-doing-abdominal-muscle-russian-twist-exercises-while-holding-weights.html?fromid=bHBtdFZhVWJjR3BJYVJnNlVQUmJ0Zz09</a>.
           </li>
           <li>
-            Stock Photo  &ldquo;Pair of young adult women doing abdominal muscle Russian twist exercises&rdquo; <em>  123RF</em> <a href="https://www.123rf.com/photo_76321532_pair-of-young-adult-women-doing-abdominal-muscle-russian-twist-exercises-while-holding-weights.html?fromid=bHBtdFZhVWJjR3BJYVJnNlVQUmJ0Zz09" target="_blank">https://www.123rf.com/photo_76321532_pair-of-young-adult-women-doing-abdominal-muscle-russian-twist-exercises-while-holding-weights.html?fromid=bHBtdFZhVWJjR3BJYVJnNlVQUmJ0Zz09
-            </a>.
+            Stock Photo. &ldquo;Hero image in gym environment section,&rdquo; <em>500px</em>, <a href="https://drscdn.500px.org/photo/24729731/q%3D80_m%3D2000/v2?client_application_id=15699&webp=true&sig=20a322f340ab4a76dd0db05f012652c915dbd6fee853fc9ead05d0e7d866022f" target="_blank">https://drscdn.500px.org/photo/24729731/q%3D80_m%3D2000/v2?client_application_id=15699&webp=true&sig=20a322f340ab4a76dd0db05f012652c915dbd6fee853fc9ead05d0e7d866022f</a>.
           </li>
-          <li>
-            Stock Photo  &ldquo;Hero image in gym environment section&rdquo; <em>  500px</em> <a href="https://drscdn.500px.org/photo/24729731/q%3D80_m%3D2000/v2?client_application_id=15699&webp=true&sig=20a322f340ab4a76dd0db05f012652c915dbd6fee853fc9ead05d0e7d866022f" target="_blank">https://drscdn.500px.org/photo/24729731/q%3D80_m%3D2000/v2?client_application_id=15699&webp=true&sig=20a322f340ab4a76dd0db05f012652c915dbd6fee853fc9ead05d0e7d866022f
-            </a>.
-          </li>
-
         </ul>
         <footer>
           <p class="sg-footer-content">
