--- a/login.html
+++ b/login.html
@@ -86,9 +86,8 @@
           &copy; 2018 Mighty Life Fitness
         </p>
         <p class="footer__note">
-          <a href="styleguide.html">
-            View Styleguide and Citations
-          </a>
+          <a href="styleguide.html">Styleguide and Citations</a> /
+          <a href="https://github.com/charliecm/mighty-life-fitness" target="_blank">Git Repo</a>
         </p>
       </div>
     </footer>
