Add image spacing.

--- a/join.html
+++ b/join.html
@@ -104,17 +104,17 @@
             </li>
           </ul>
           <div class="row">
-            <div class="col col--4md">
+            <div class="img-item col col--4md">
               <a href="img/gym-environment1.jpg" target="_blank">
                 <img src="img/gym-environment1.jpg" alt="Training area 1" class="img-responsive">
               </a>
             </div>
-            <div class="col col--4md">
+            <div class="img-item col col--4md">
               <a href="img/gym-environment2.jpg" target="_blank">
                 <img src="img/gym-environment2.jpg" alt="Training area 2" class="img-responsive">
               </a>
             </div>
-            <div class="col col--4md">
+            <div class="img-item col col--4md">
               <a href="img/gym-environment3.jpg" target="_blank">
                 <img src="img/gym-environment3.jpg" alt="Training area 3" class="img-responsive">
               </a>
