Fix wireframe image.

--- a/wireframes.html
+++ b/wireframes.html
@@ -46,8 +46,8 @@
           For smartwatch, smartphone and smart TV. Click the image to enlarge.
         </p>
         <p>
-          <a href="img/wireframes.jpg" target="_blank">
-            <img src="img/wireframes.jpg" alt="Wireframes" class="img-responsive">
+          <a href="img/sg-wireframes.jpg" target="_blank">
+            <img src="img/sg-wireframes.jpg" alt="Wireframes" class="img-responsive">
           </a>
         </p>
         <footer>
