remove hero citation

--- a/index.html
+++ b/index.html
@@ -56,17 +56,12 @@
               Join Now
             </a>
           </div>
-          <p class="hero__citation">
-            Photo by <a href="https://unsplash.com/@victorfreitas" target="_blank" class="a-light">Victor Freitas</a>
-          </p>
+        
         </div>
       </div>
       <section class="section">
         <div class="wrap">
-          <h2>Membership</h2>
-          <p>
-            We offer three options for monthly subscriptions. By registering online, you'll immediately get benefits like access to the gym during open hours and <strong>a free personal training session</strong> every 3rd month.
-          </p>
+          <h2 id="membership">Membership</h2>
           <div class="listings row">
             <div class="listings__item col col--4md">
               <div class="listings__item-content">
@@ -88,13 +83,59 @@
               </div>
             </div>
           </div>
+
           <p>
-            <a href="join.html#membership" class="btn">
-              Learn More
+            All tiers include access to the gym during open hours and <strong>a free personal training session</strong> every 3rd month. Our gym features:
+          </p>
+          <ul class="grid-list row">
+            <li class="col col--6 col--4md">
+              Lockers
+            </li>
+            <li class="col col--6 col--4md">
+              Showers
+            </li>
+            <li class="col col--6 col--4md">
+              6 power racks
+            </li>
+            <li class="col col--6 col--4md">
+              6 benches
+            </li>
+            <li class="col col--6 col--4md">
+              Stretching area
+            </li>
+            <li class="col col--6 col--4md">
+              Free parking
+            </li>
+          </ul>
+          <p>
+          Sign up and manager your membership now.
+          </p>
+          <p>
+            <a href="join.html" class="btn">
+               Join now
             </a>
           </p>
+          <h3> Image Gallery</h3>
+          <div class="row">
+            <div class="img-item col col--4md">
+              <a href="img/gym-environment1.jpg" target="_blank">
+                <img src="img/gym-environment1.jpg" alt="Training area 1" class="img-responsive">
+              </a>
+            </div>
+            <div class="img-item col col--4md">
+              <a href="img/gym-environment2.jpg" target="_blank">
+                <img src="img/gym-environment2.jpg" alt="Training area 2" class="img-responsive">
+              </a>
+            </div>
+            <div class="img-item col col--4md">
+              <a href="img/gym-environment3.jpg" target="_blank">
+                <img src="img/gym-environment3.jpg" alt="Training area 3" class="img-responsive">
+              </a>
+            </div>
+          </div>
         </div>
       </section>
+
       <section class="section section--alt">
         <div class="wrap">
           <h2>Training</h2>
