adding hero image section into citations

--- a/citations.html
+++ b/citations.html
@@ -60,6 +60,18 @@
           <li>
             Stock Photo. &ldquo;Hero image in gym environment section,&rdquo; <em>500px</em>, <a href="https://drscdn.500px.org/photo/24729731/q%3D80_m%3D2000/v2?client_application_id=15699&webp=true&sig=20a322f340ab4a76dd0db05f012652c915dbd6fee853fc9ead05d0e7d866022f" target="_blank">https://drscdn.500px.org/photo/24729731/q%3D80_m%3D2000/v2?client_application_id=15699&webp=true&sig=20a322f340ab4a76dd0db05f012652c915dbd6fee853fc9ead05d0e7d866022f</a>.
           </li>
+          <li>
+            Victor Freitas &ldquo;Hero images&rdquo; <em>unsplash</em>, <a href="https://unsplash.com/@victorfreitas" target="_blank">https://unsplash.com/@victorfreitas</a>.
+          </li>
+          <li>
+            Ricardo Estefânio &ldquo;Hero images&rdquo; <em>unsplash</em>, <a href="https://unsplash.com/@ricardo2coach" target="_blank">https://unsplash.com/@ricardo2coach</a>.
+          </li>
+          <li>
+            Justyn Warner &ldquo;Hero images&rdquo; <em>unsplash</em>, <a href="https://unsplash.com/@justynwarner" target="_blank">https://unsplash.com/@justynwarner</a>.
+          </li>
+          <li>
+            Bruno Nascimento &ldquo;Hero images&rdquo; <em>unsplash</em>, <a href="https://unsplash.com/@bruno_nascimento" target="_blank">https://unsplash.com/@bruno_nascimento</a>.
+          </li>
         </ul>
         <footer>
           <p class="sg-footer-content">
